Pertemuan 11 Latihan Sendiri

--- a/Pertemuan11/index.html
+++ b/Pertemuan11/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dasar-dasar Pemograman Java Script</title>
+    <title>Var, let, const</title>
     <script src="index.js"></script>
 </head> 
 <body>
